fix(combobox): allow scroll on overflow

--- a/src/components/combobox/combobox.css
+++ b/src/components/combobox/combobox.css
@@ -15,7 +15,7 @@
     background-color: var(--surface-container);
     border-radius: 0.5rem;
     box-shadow: var(--elevation--2);
-    overflow: hidden;
+    overflow: auto;
     padding: 0.5rem 0;
 
     .react-aria-Header {
